tests/ui/traits/default_auto_traits/extern-types.current.stderr
error[E0277]: the trait bound `extern_non_leak::Opaque: Leak` is not satisfied
  --> $DIR/extern-types.rs:50:13
   |
LL |         foo(x);
   |         --- ^ the trait `Leak` is not implemented for `extern_non_leak::Opaque`
   |         |
   |         required by a bound introduced by this call
   |
note: required by a bound in `foo`
  --> $DIR/extern-types.rs:26:8
   |
LL | fn foo<T: PointeeSized>(_: &T) {}
   |        ^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
